# OctaIndex3D

./: .gitignore  BOOK_ENHANCEMENT_SUGGESTIONS.md  BRIDGE_README.md  CHANGELOG.md  CLAUDE.md  CLI_USAGE.md  CODEX 3D Spatial Indexing and Routing System (BCC Lattice) – Functional Specification.docx  CODE_OF_CONDUCT.md  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  Cargo.toml  EXPLORER_README.md  GAME_ENHANCEMENTS.md  OPTIMIZATION_GUIDE.md  PERFORMANCE.md  README.md  RELEASE_0.4.0.md  RELEASE_0.4.1.md  RELEASE_0.4.2.md  RELEASE_0.4.3.md  SECURITY.md  STARSHIP_README.md  TIER1_OPTIMIZATIONS.md  WHITEPAPER.md  build.rs  deny.toml  octahedron_image.html  octahedron_showcase.html  octahedron_still.html  replay.json  rust-toolchain.toml  workinprogress.txt
.claude/skills/octaindex3d-dev/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: book-quality.yml  codeql.yml  release.yml  rust.yml  security.yml
.github/workflows/internal/: README.md  amd_optimization.md  amd_summary.txt  intel_nvidia_optimization.md  intel_summary.txt
benches/: BENCHMARK_SUMMARY_2025-11-19.md  COMPETITIVE_ANALYSIS.md  COMPETITIVE_BENCHMARK_RESULTS.md  COMPLETE_POST_REBOOT_SUMMARY.md  README.md  TIER1_RESULTS_SUMMARY.md  V0_5_0_BENCHMARKS.md  core_operations.rs  octomap_results.txt  performance_optimizations.rs  simd_batch_optimizations.rs  tier1_optimizations.rs  v0_5_0_features.rs  v0_5_0_results_2025-11-19.md  v0_5_0_results_aws_g6xlarge_2025-11-19.md
benches/competitive_code/: CMakeLists.txt  Dockerfile  benchmark_octomap.cpp
book/: API_CONTRACT.md  BOOK_ENHANCEMENT_SUGGESTIONS.md  ERRATA.md  LICENSE.md  README.md  rust-toolchain.toml
book/appendices/: README.md  appendix_a_mathematical_proofs.md  appendix_b_api_reference.md  appendix_c_performance_benchmarks.md  appendix_d_installation_and_setup.md  appendix_e_example_code.md  appendix_f_migration_guide.md  appendix_g_performance_cookbook.md  appendix_h_integration_examples.md  appendix_i_quick_reference.md  appendix_j_troubleshooting.md
book/back_matter/: glossary.md  index.md  resources.md
book/front_matter/: 01_title_page.md  02_copyright.md  03_dedication.md  04_preface.md  05_acknowledgments.md  06_table_of_contents.md  07_list_of_figures.md  08_list_of_tables.md  09_about_the_authors.md  10_quick_start.md
book/images/: truncated_octahedron_interactive.html
book/part1_foundations/: README.md  chapter01_introduction.md  chapter02_mathematical_foundations.md  chapter03_octree_structures.md
book/part2_architecture/: README.md  chapter04_system_architecture.md  chapter05_identifier_types.md  chapter06_coordinate_systems.md
book/part3_implementation/: README.md  chapter07_performance_optimization.md  chapter08_container_formats.md  chapter09_testing_and_validation.md
book/part4_applications/: README.md  chapter10_robotics_and_autonomy.md  chapter11_geospatial_analysis.md  chapter12_scientific_computing.md  chapter13_gaming_and_virtual_worlds.md  chapter14_mars_exploration_and_settlement.md
book/part5_advanced/: README.md  chapter14_distributed_and_parallel.md  chapter15_distributed_and_parallel.md  chapter15_machine_learning_integration.md  chapter16_future_directions.md  chapter16_machine_learning_integration.md  chapter17_future_directions.md
docs/: APPLE_SILICON_OPTIMIZATIONS.md  CPU_COMPARISON.md  GPU_ACCELERATION.md  MIGRATION_v0.2_to_v0.3.md  README.md  SAFE_LOCAL_TESTING.md  cell_id_format_analysis.md  resolution_explained.md
examples/: MOTHERSHIP_README.md  advanced_occupancy.rs  basic_usage.rs  bcc14_prim_astar_demo.rs  deep_space_explorer.rs  esdf_path_planning.rs  exploration_primitives.rs  interstellar_navigation.rs  mesh_reconstruction.rs  mothership_bridge.rs  mothership_dashboard.rs  occupancy_fusion.rs  profile_hotspots.rs  quickstart.rs  resolution_demo.rs  starship_command.rs  tsdf_reconstruction.rs  verify_index64_hilbert64.rs
scripts/: book_quality_check.sh  check_changelog_entry.sh  generate_book_api_contract.sh  generate_book_figures.py  generate_book_index.py  safe_local_test.sh
src/: compression.rs  container.rs  container_v2.rs  error.rs  frame.rs  geojson.rs  grid.rs  hilbert.rs  id.rs  ids.rs  io.rs  lattice.rs  layer.rs  lib.rs  morton.rs  neighbors.rs  path.rs
src/layers/: bcc_utils.rs  esdf.rs  exploration.rs  export.rs  measurement.rs  mesh.rs  mod.rs  occupancy.rs  occupancy_compressed.rs  occupancy_gpu.rs  occupancy_temporal.rs  ros2_bridge.rs  tsdf.rs
src/performance/: arch_optimized.rs  avx512.rs  batch.rs  fast_neighbors.rs  hilbert_batch.rs  memory.rs  mod.rs  morton_batch.rs  parallel.rs  simd.rs  simd_batch.rs
src/performance/gpu/: cuda.rs  metal.rs  mod.rs  rocm.rs  wgpu_backend.rs
src/performance/gpu/shaders/: neighbors.metal  neighbors.ptx  neighbors.wgsl  occupancy_raycast.metal
