[package]
name = "octaindex3d"
version = "0.2.0"
edition = "2021"
authors = ["Michael A. McLarney"]
description = "3D Spatial Indexing and Routing System based on BCC lattice with truncated octahedral cells"
license = "MIT"
repository = "https://github.com/FunKite/OctaIndex3D"
keywords = ["spatial", "3d", "indexing", "routing", "bcc-lattice"]
categories = ["algorithms", "data-structures", "science"]

[[bin]]
name = "octaindex3d"
path = "src/bin/cli.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"

# Bech32m encoding
bech32 = "0.11"

# Parallelism
rayon = "1.10"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Data structures
ahash = "0.8"  # Fast hashing
rustc-hash = "2.0"

# Geometry
geo = "0.28"
geo-types = "0.7"

# File I/O
arrow = { version = "53.0", optional = true }
parquet = { version = "53.0", optional = true }

# Math
num-traits = "0.2"
ordered-float = "4.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
proptest = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
approx = "0.5"
ratatui = "0.28"
crossterm = "0.28"

[features]
default = []
arrow-support = ["arrow", "parquet"]

# [[bench]]
# name = "benchmarks"
# harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
lto = true
