[package]
name = "octaindex3d"
version = "0.3.2"
edition = "2021"
rust-version = "1.75"
authors = ["Michael A. McLarney"]
description = "3D Spatial Indexing and Routing System based on BCC lattice with truncated octahedral cells"
license = "MIT"
repository = "https://github.com/FunKite/OctaIndex3D"
keywords = ["spatial", "3d", "indexing", "routing", "bcc-lattice"]
categories = ["algorithms", "data-structures", "science"]
build = "build.rs"

# Binary targets temporarily disabled - need CLI implementation
# [[bin]]
# name = "octaindex3d-repack"
# path = "src/bin/repack.rs"

[dependencies]
# Compression (LZ4 is default)
lz4_flex = "0.11"
zstd = { version = "0.13", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
serde_cbor = { version = "0.11", optional = true }

# Bech32m encoding
bech32 = "0.11"

# Zero-copy support
bytemuck = { version = "1.14", features = ["derive"], optional = true }
zerocopy = { version = "0.7", features = ["derive"], optional = true }
rkyv = { version = "0.7", optional = true }

# Pathfinding
petgraph = { version = "0.6", optional = true }

# Synchronization
once_cell = "1.19"
parking_lot = "0.12"

# Error handling
thiserror = "1.0"

# Math
num-traits = "0.2"
ordered-float = "4.0"
glam = { version = "0.29", optional = true }

# CRC for container integrity
crc32fast = "1.4"

# SHA256 for container v2
sha2 = { version = "0.10", optional = true }

# Data structures for legacy modules
ahash = "0.8"
rustc-hash = "2.0"

# CLI
clap = { version = "4.5", features = ["derive"], optional = true }

[dev-dependencies]
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
approx = "0.5"
rand = "0.8"

[features]
default = ["serde", "lz4"]
lz4 = []
zstd = ["dep:zstd"]
serde = ["dep:serde", "dep:serde_json", "dep:serde_cbor"]
pathfinding = ["dep:petgraph"]
bytemuck = ["dep:bytemuck", "dep:zerocopy"]
rkyv = ["dep:rkyv"]
simd = []
hilbert = []
container_v2 = ["dep:sha2"]
gis_geojson = ["serde", "dep:glam"]
cli = ["dep:clap", "serde"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
lto = true
